data/derived/sp14/progs/unify/prog1539.ml.out
Characters 29-37:
  let _ = exprToString (build (makeRand,5));;
                               ^^^^^^^^
Error: This expression has type int * int -> int * int -> int
       but an expression was expected of type int * int -> int
       Type int * int -> int is not compatible with type int 
